--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
         pre {
             padding: 1em;
+            overflow: auto;
         }
 
         code {
@@ -62,21 +63,6 @@
                 border: 0;
             }
 
-
-        .break-word {
-            /* Internet Explorer 5.5+ */
-            word-wrap: break-word;
-            -ms-word-break: break-all;
-            word-break: break-all;
-            /*Non standard for webkit*/
-            word-break: break-word;
-            -webkit-hyphens: auto;
-            -moz-hyphens: auto;
-            hyphens: auto;
-            /*new syntax*/
-            overflow-wrap: break-word;
-        }
-
         .header {
             background: #1570A6;
             color: #fff;
@@ -93,6 +79,10 @@
             color: #9C8611;
             text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
         }
+
+            .result > div {
+                font-weight: bold;
+            }
 
         .btn {
             display: inline-block;
@@ -116,7 +106,7 @@
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f7f7f7', endColorstr='#dddddd',GradientType=0 ); /* IE6-9 */
             border: 1px solid #cccccc;
             border-color: #d2d2d2 #d2d2d2 #b3b3b3;
-            border-radius: 3px;
+            border-radius: 4px;
             -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);
             -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);
             box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1), 0 1px 2px rgba(0, 0, 0, 0.05);
@@ -218,10 +208,6 @@
                 background: #0087ca;
             }
 
-            .btn-prime:focus {
-                outline: thin dotted #00527b;
-            }
-
             .btn-prime.active,
             .btn-prime:active {
                 color: #fff;
@@ -248,7 +234,7 @@
                 <div class="clmn2">
                     <h2>What is it?</h2>
                     <p>
-                        A jQuery plugin that helps you easily set up <a href="https://developers.google.com/analytics/devguides/collection/gajs/eventTrackerGuide">Event Tracking With Google Analytics</a>. When added to a page it will automagically add event tracking to any item containing the appropriate html5 data-attributes.
+                        A jQuery plugin that helps you easily set up <a href="https://developers.google.com/analytics/devguides/collection/gajs/eventTrackerGuide" target="_blank">Event Tracking With Google Analytics</a>. When added to a page it will automagically add event tracking to any item containing the appropriate html5 data-attributes.
                     </p>
                     <h2>Get it here.</h2>
                     <a href="http://jimbobsquarepants.github.com/Flexo/css/flexo.css" class="btn btn-prime" target="_blank">jquery.googleanalytics v2.0.0</a>
@@ -267,8 +253,13 @@
                 </div>
             </div>
             <h2>Demo</h2>
-            <p>The following link contains all the possible parameters to send to the Analytics <code>_trackEvent</code> and <code>_trackPageview</code> methods. All parameters are validated against the Google Analytics Api constraints. </p>
-            <pre class="break-word">
+            <p>
+                The following markup contains an example of all the possible parameters to send to the Analytics 
+                <a href="https://developers.google.com/analytics/devguides/collection/gajs/eventTrackerGuide#SettingUpEventTracking" target="_blank"><code>_trackEvent()</code></a>
+                and <a href="https://developers.google.com/analytics/devguides/collection/gajs/methods/gaJSApiBasicConfiguration#_gat.GA_Tracker_._trackPageview" target="_blank"><code>_trackPageview()</code></a>
+                methods. All parameters are validated against the Google Analytics Api constraints.
+            </p>
+            <pre class="language-markup">
                 <code>
 &lt;!--_trackEvent markup---&gt;
 &lt;a href="#" data-ga-category="test category" data-ga-action="test action" data-ga-label="test label" data-ga-value="0" data-ga-noninteraction="true"&gt;
@@ -291,39 +282,141 @@
                 <h2>Wait there's more...</h2>
                 <p>Whilst the default behaviour should cover most scenarios there's always something that comes up which requires custom behaviour. To cater for this the plugin provides a data api and a <code>tracked.ga</code> event for handling callbacks</p>
                 <p>Here's an example of how to override the default behaviour as used on this page.</p>
-                <pre class="break-word">
+                <pre class="language-javascript">
                     <code>
-        (function ($) {
-            // Unbind the default behaviour
-            $(document).off("ready.ga").on("ready", function () {
+(function ($) {
+    // Unbind the default behaviour.
+    $(document).off("ready.ga").on("ready", function () {
 
-                // Set some options. The ones below are the defaults.
-                var $result = $(".result"),
-                    options = {
-                        event: "trackEvent", // The event name unprefixed. 
-                        handler: "click", // The eventhandler to trigger the tracking. 
-                                          // Using 'load' will track immediately.
-                        debug: true // Whether to run in debug mode.
-                    };
+        // Set some options. The ones below are the defaults.
+        var $result = $(".result"),
+            options = {
+                event: "trackEvent", // The event name unprefixed. 
+                handler: "click", // The eventhandler to trigger the tracking. 
+                                  // Using 'load' will track immediately.
+                debug: true // Whether to run in debug mode.
+            };
 
-                // Bind using the custom selector.        
-                $(":ga").googleAnalytics(options).on("tracked.ga", function (event) {
+        // Bind using the custom selector.        
+        $(":ga").googleAnalytics(options).on("tracked.ga", function (event) {
+            
+            // Display the data.
+            var args = $(event.target).data("ga").args;
 
-                    var args = $(event.target).data("ga").args;
+            $result.children("div").empty().html(args.toString().replace(/,/g, ", ")).end().show();
 
-                    $result.children("div").empty().html(args.toString().replace(/,/g, ", ")).end().show();
+        });
 
-                });
-
-            });
-        }(jQuery));
+    });
+}(jQuery));
                     </code>
                 </pre>
+            </div>
+            <div>
+                <h2>And More...</h2>
+                <p>
+                    It's possible to add further methods to the plugin by extending the <code>$.googleAnalyticsApi</code> object. 
+                    In the example below we are adding support for the <a href="https://developers.google.com/analytics/devguides/collection/gajs/methods/gaJSApiEcommerce#_gat.GA_Tracker_._addTrans" target="_blank"><code>addTrans()</code></a>
+                    method used in ecommerce tracking.
+                </p>
+                <pre class="language-javascript">
+                    <code>
+// Create our method rules.
+var addTrans = {
+        event: {
+            value: "_addTrans",
+            validation: "isString",
+            type: "string"
+        },
+        orderId: {
+            value: null,
+            validation: "isString",
+            type: "string"
+        },
+        affiliation: {
+            value: null,
+            validation: "optString",
+            type: "string"
+        },
+        total: {
+            value: null,
+            validation: "isString",
+            type: "string"
+        },
+        tax: {
+            value: null,
+            validation: "optString",
+            type: "string"
+        },
+        shipping: {
+            value: null,
+            validation: "optString",
+            type: "string"
+        },
+        city: {
+            value: null,
+            validation: "optString",
+            type: "string"
+        },
+        state: {
+            value: null,
+            validation: "optString",
+            type: "string"
+        },
+        country: {
+            value: null,
+            validation: "optString",
+            type: "string"
+        }
+};
+
+// Extend the $.googleAnalyticsApi object. 
+$.extend($.googleAnalyticsApi, addTrans);
+                    </code>
+                </pre>
+                <p>
+                    Data attibutes would then be added to the markup prefixed with <code>data-ga-</code> as with the built in methods.
+                </p>
+                <div class="row">
+                    <div class="clmn2">
+                        <h3>Return Types</h3>
+                        <ul>
+                            <li>string</li>
+                            <li>integer</li>
+                            <li>float</li>
+                            <li>boolean</li>
+                        </ul>
+                    </div>
+                    <div class="clmn2">
+                        <h3>Validation Types</h3>
+                        <div class="row">
+                            <div class="clmn2">
+                                <ul>
+                                    <li>isString</li>
+                                    <li>isInteger</li>
+                                    <li>isFloat</li>
+                                    <li>isBoolean</li>
+                                </ul>
+                            </div>
+                            <div class="clmn2">
+                                <ul>
+                                    <li>optString</li>
+                                    <li>optInteger</li>
+                                    <li>optFloat</li>
+                                    <li>optBoolean</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="page-push"></div>
     </div>
-    <div class="page-footer"></div>
+    <div class="page-footer">
+        <div class="container">
+        </div>
+    </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script src="jquery.googleanalytics.js" type="text/javascript"></script>
